--- a/BillC/src/app/pages/login/login.page.html
+++ b/BillC/src/app/pages/login/login.page.html
@@ -21,7 +21,7 @@
 
     <ion-row>
       <ion-col> 
-      <ion-button type="submit" (click)="logIn(email, password)" expand="block">Register</ion-button>
+      <ion-button type="submit" (click)="logIn(email, password)" expand="block">Login</ion-button>
       </ion-col>
     </ion-row>
   </form>
